--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <a class="game-link" href="https://freezaf.github.io/Incremenergy" target="_blank">Incremenergy</a>
       <a class="game-link" href="https://freezaf.github.io/Escape-Vantablack" target="_blank">Escape Vantablack</a>
     </div>
-    <a class="hub-link" href="https://freezaf.github.io/Hub/" target="_blank">Visit Hub</a>
+    <a class="hub-link" href="https://freezaf.github.io/Hub/">Visit Hub</a>
   </main>
   <script src="script.js"></script>
 </body>
