--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     .hub-link {
       position: absolute;
       bottom: 20px;
-      right: 20px;
+      left: 20px;
       padding: 10px 20px;
       background-color: rgba(0, 198, 255, 0.8);
       border: 2px solid #0072ff;
