--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </header>
   <main>
     <div class="game-links">
-      <a class="game-link" href="https://freezaf.github.io/Distance-Incremental" target="_blank">Distance Incremental</a>
+      <a class="game-link" href="https://freezaf.github.io/DistInc/" target="_blank">Distance Incremental</a>
       <a class="game-link" href="https://freezaf.github.io/Prestige-Tree" target="_blank">Prestige Tree</a>
       <a class="game-link" href="https://freezaf.github.io/Factory-Of-Automation" target="_blank">Factory of Automation</a>
       <a class="game-link" href="https://freezaf.github.io/Synergism" target="_blank">Synergism</a>
